# FirstVTKQT

./: CMakeLists.txt  DicomWidget.cpp  DicomWidget.hpp  MyGodWidget.cpp  MyGodWidget.hpp  main.cpp
